--- a/src/components.scss
+++ b/src/components.scss
@@ -20,8 +20,8 @@
       }
 
       td {
-        border-bottom: 1px solid $middlegray !important;
-        border-top: 1px solid $middlegray !important;
+        border-bottom: 1px solid $gray !important;
+        border-top: 1px solid $gray !important;
       }
     }
   }
