--- a/src/login.scss
+++ b/src/login.scss
@@ -79,7 +79,7 @@
   background-color: rgba(0, 0, 0, 0.5) !important;
 
   .c {
-    background: darken($middlegray, 20%) !important;
+    background: darken($gray, 20%) !important;
     padding: 0 !important;
     height: 300px !important;
     width: 250px !important;
