--- a/src/mainMenu/mainMenu.scss
+++ b/src/mainMenu/mainMenu.scss
@@ -47,7 +47,7 @@
         text-transform: uppercase !important;
         text-decoration: none !important;
         color: $black !important;
-        background: $middlegray !important;
+        background: $gray !important;
         border-right: 1px solid $darkgray !important;
         border-bottom: 1px solid transparent !important;
         transition: all 0.2s !important;
