--- a/src/pagination.scss
+++ b/src/pagination.scss
@@ -48,7 +48,7 @@
       a {
         display: inline-block !important;
         height: 30px !important;
-        background-color: $middlegray !important;
+        background-color: $gray !important;
         background-position: center !important;
         background-repeat: no-repeat !important;
         text-decoration: none !important;
@@ -111,7 +111,7 @@
       align-items: center !important;
       color: $deepgray !important;
       padding: 0 !important;
-      background: $middlegray !important;
+      background: $gray !important;
       text-decoration: none !important;
       transition: all 0.1s !important;
       margin-top: 0 !important;
