--- a/src/profile/_global.scss
+++ b/src/profile/_global.scss
@@ -133,7 +133,7 @@
 
     .comments {
       background: $darkgray;
-      border: 1px solid $middlegray !important;
+      border: 1px solid $gray !important;
     }
   }
 }
