--- a/src/profile/_vocs.scss
+++ b/src/profile/_vocs.scss
@@ -3,7 +3,7 @@
   .vocs {
     th,
     td {
-      border-bottom: 1px solid $middlegray !important;
+      border-bottom: 1px solid $gray !important;
       background: $darkgray !important;
     }
 
