--- a/src/recentGames.scss
+++ b/src/recentGames.scss
@@ -121,7 +121,7 @@ body {
     top: -15px !important;
     width: 51% !important;
     height: 15px !important;
-    background: $middlegray $fixedRecent 50% !important;
+    background: $gray $fixedRecent 50% !important;
     opacity: $handle-opacity !important;
 
     &:hover {
