--- a/src/about.scss
+++ b/src/about.scss
@@ -28,7 +28,7 @@
       justify-content: center !important;
       align-items: center !important;
       background: transparent !important;
-      background-color: $middlegray !important;
+      background-color: $gray !important;
       border: 1px solid $white !important;
       color: $white !important;
     }
@@ -48,7 +48,7 @@
     justify-content: center !important;
     align-items: center !important;
     background: $deepgray !important;
-    color: $middlegray !important;
+    color: $gray !important;
     border: 1px solid transparent !important;
 
     &:hover {
@@ -82,7 +82,7 @@
 
   /* rules tab ranges table big border remove */
   table.cars {
-    border: 1px solid $middlegray !important;
+    border: 1px solid $gray !important;
 
     /* rules tab ranges table bg color */
     td {
