--- a/src/chat.scss
+++ b/src/chat.scss
@@ -126,7 +126,7 @@
 
 .chat {
   background: $darkgray !important;
-  border: 1px solid $middlegray !important;
+  border: 1px solid $gray !important;
 
   .userlist {
     background: $darkgray !important;
@@ -320,7 +320,7 @@
     table {
       tr {
         display: flex !important;
-        border-top: 1px solid $middlegray !important;
+        border-top: 1px solid $gray !important;
       }
 
       td {
