--- a/src/forum.scss
+++ b/src/forum.scss
@@ -15,26 +15,26 @@ input {
 #write-block {
   > p {
     display: flex !important;
-    
+
     > input {
       color: $white !important;
       width: 50% !important;
       height: 35px !important;
       background: #3b3b3b !important;
-      border: 1px solid $middlegray !important;
+      border: 1px solid $gray !important;
       transition: all 0.1s !important;
-      
+
       &:hover {
         background: $deepgray !important;
         color: $white !important;
         border: 1px solid $white !important;
         transition: all 0.1s !important;
       }
-      
+
       &[name="send"] {
         margin-right: 1px !important;
       }
-      
+
       &[name="preview"] {
         margin-left: 1px !important;
       }
@@ -50,33 +50,33 @@ input {
     left: 0 !important;
     right: 0 !important;
     display: block !important;
-    
+
     tbody {
       display: flex !important;
       justify-content: center !important;
     }
   }
-  
+
   dd {
     margin: 10px 0 !important;
-    
+
     input[name="send"] {
       float: left !important;
     }
   }
-  
+
   dt {
     display: none !important;
   }
-  
+
   input[type="submit"] {
     color: $white !important;
     width: 50% !important;
     height: 35px !important;
     background: #3b3b3b !important;
-    border: 1px solid $middlegray !important;
+    border: 1px solid $gray !important;
     transition: all 0.1s !important;
-    
+
     &:hover {
       background: $deepgray !important;
       color: $white !important;
@@ -84,11 +84,11 @@ input {
       transition: all 0.1s !important;
     }
   }
-  
+
   textarea {
     position: static !important;
     font-family: "Montserrat", sans-serif !important;
-    border: 1px solid $middlegray !important;
+    border: 1px solid $gray !important;
     background: $darkgray !important;
     color: $white !important;
     font-size: 14px !important;
@@ -100,12 +100,12 @@ input {
     padding: 10px !important;
     overflow: hidden !important;
     z-index: 100 !important;
-    
+
     &:hover {
       background: $deepgray !important;
       opacity: 0.8 !important;
     }
-    
+
     &:focus {
       background: $deepgray !important;
       width: 80vw !important;
@@ -129,34 +129,34 @@ input {
       width: 50% !important;
       height: 35px !important;
       background: #3b3b3b !important;
-      border: 1px solid $middlegray !important;
+      border: 1px solid $gray !important;
       transition: all 0.1s !important;
-      
+
       &:hover {
         background: $deepgray !important;
         color: $white !important;
         border: 1px solid $white !important;
         transition: all 0.1s !important;
       }
-      
+
       &[onclick*="submit"] {
         float: left !important;
       }
     }
-    
+
     .post-container {
       .text {
         color: $white;
-        
+
         img:hover {
           transition: all 0.2s !important;
           opacity: 1 !important;
         }
       }
-      
+
       padding-right: 100px !important;
     }
-    
+
     th {
       width: 100% !important;
       padding: 10px !important;
@@ -164,12 +164,12 @@ input {
       justify-content: center !important;
       border: none !important;
     }
-    
+
     td {
       border: none !important;
       border-bottom: none !important;
     }
-    
+
     .post-opts {
       a {
         border-bottom: unset !important;
@@ -186,12 +186,12 @@ input {
         background-image: $edit-icon !important;
         background-repeat: no-repeat !important;
         background-position: center !important;
-        
+
         &:hover {
           background-color: rgba(134, 226, 213, 0.5) !important;
         }
       }
-      
+
       a[onclick*="reply"] {
         display: inline-flex !important;
         font-size: 0 !important;
@@ -203,17 +203,17 @@ input {
         background-image: $reply-icon !important;
         background-repeat: no-repeat !important;
         background-position: center !important;
-        
+
         &:hover {
           background-color: rgba(245, 215, 110, 0.5) !important;
         }
       }
     }
-    
+
     textarea {
       position: static !important;
       font-family: "Montserrat", sans-serif !important;
-      border: 1px solid $middlegray !important;
+      border: 1px solid $gray !important;
       background: $darkgray !important;
       color: $white !important;
       font-size: 14px !important;
@@ -225,12 +225,12 @@ input {
       padding: 10px !important;
       overflow: hidden !important;
       z-index: 100 !important;
-      
+
       &:hover {
         background: $deepgray !important;
         opacity: 0.8 !important;
       }
-      
+
       &:focus {
         background: $deepgray !important;
         width: 80vw !important;
@@ -245,38 +245,40 @@ input {
       }
     }
   }
-  
+
   .post-moved {
-    th, td {
+    th,
+    td {
       color: $white !important;
       background: none !important;
     }
   }
-  
+
   .posth {
     background: transparent !important;
-    border-bottom: 1px solid $middlegray !important;
-    
+    border-bottom: 1px solid $gray !important;
+
     &.admin {
       color: lightgreen !important;
       background: transparent !important;
       border-bottom: 1px solid lightgreen !important;
     }
-    
-    th, td {
+
+    th,
+    td {
       border: none !important;
     }
-    
+
     .moved {
       color: $white !important;
     }
   }
-  
+
   .write {
     textarea {
       position: static !important;
       font-family: "Montserrat", sans-serif !important;
-      border: 1px solid $middlegray !important;
+      border: 1px solid $gray !important;
       background: $darkgray !important;
       color: $white !important;
       font-size: 14px !important;
@@ -288,12 +290,12 @@ input {
       padding: 10px !important;
       overflow: hidden !important;
       z-index: 100 !important;
-      
+
       &:hover {
         background: $deepgray !important;
         opacity: 0.8 !important;
       }
-      
+
       &:focus {
         background: $deepgray !important;
         width: 80vw !important;
@@ -308,24 +310,24 @@ input {
       }
     }
   }
-  
+
   table.foot {
     margin-bottom: 80px !important;
-    
+
     td.pages {
       display: none !important;
     }
   }
-  
+
   a[rel="nofollow"] {
     text-decoration: none !important;
-    
+
     &:hover {
       text-decoration: none !important;
       filter: invert(0.3) !important;
     }
   }
-  
+
   span[style*="background-color"] {
     background-color: $darkgray !important;
   }
@@ -333,25 +335,26 @@ input {
 
 /* Topics List */
 #topics-list {
-  .item, .even {
+  .item,
+  .even {
     border: none !important;
     background: $darkgray !important;
-    
+
     &.even td {
       border: none !important;
       background: $darkgray !important;
     }
-    
+
     td {
-      border-bottom: 1px solid $middlegray !important;
-      
+      border-bottom: 1px solid $gray !important;
+
       &.last-post {
         display: inline-flex !important;
         align-items: center !important;
         justify-content: space-between !important;
         width: 100% !important;
         min-height: 47px !important;
-        
+
         .go {
           display: inline-flex !important;
           font-size: 0 !important;
@@ -365,13 +368,13 @@ input {
           background-image: $chevron-right-icon !important;
           background-repeat: no-repeat !important;
           background-position: center center !important;
-          
+
           &:hover {
             background-color: rgba(134, 255, 249, 0.5) !important;
             background-position: 10px center !important;
             background-image: $chevron-right-icon-hover !important;
           }
-          
+
           img {
             height: 0 !important;
           }
@@ -389,7 +392,7 @@ input {
       height: 75px !important;
       position: relative !important;
       border: none !important;
-      
+
       &.last-post {
         .go {
           display: inline-flex !important;
@@ -406,24 +409,24 @@ input {
           background-image: $chevron-right-icon !important;
           background-repeat: no-repeat !important;
           background-position: center center !important;
-          
+
           &:hover {
             background-color: rgba(134, 255, 249, 0.5) !important;
             background-position: 10px center !important;
             background-image: $chevron-right-icon-hover !important;
           }
-          
+
           img {
             height: 0 !important;
           }
         }
-        
+
         .title {
           margin-right: 50px !important;
         }
       }
     }
-    
+
     a.short-description {
       color: $blue !important;
       text-decoration: none !important;
@@ -436,13 +439,13 @@ input {
       padding-left: 10px !important;
       padding-top: 5px !important;
       z-index: 1 !important;
-      
+
       &:hover {
         color: $lightblue !important;
         background-color: rgba(0, 0, 0, 0.15) !important;
       }
     }
-    
+
     .long-description {
       position: absolute !important;
       color: $white !important;
@@ -450,11 +453,11 @@ input {
       margin-left: 10px !important;
     }
   }
-  
+
   .feed-link {
     a {
       color: $blue !important;
-      
+
       &:hover {
         color: $lightblue !important;
       }
@@ -466,16 +469,16 @@ input {
 #profile-block {
   .user-content {
     margin-top: 15px !important;
-    
+
     .comments {
       .write {
         textarea {
           border: none !important;
-          border: 1px solid $middlegray !important;
+          border: 1px solid $gray !important;
           background: $darkgray !important;
         }
       }
-      
+
       .title {
         a.name:not(:hover) {
           color: $blue !important;
@@ -493,17 +496,17 @@ input {
 
 .hidemain {
   margin: 15px 0 !important;
-  border-color: $middlegray !important;
+  border-color: $gray !important;
   background: $deepgray !important;
-  
+
   .hidetop {
     font-size: 0 !important;
     padding-left: 0 !important;
     background: none !important;
-    background-color: $middlegray !important;
+    background-color: $gray !important;
     height: 15px !important;
     margin: 5px !important;
-    
+
     &.expanded {
       font-size: 0 !important;
       padding-left: 0 !important;
@@ -542,7 +545,8 @@ body .codemain {
 }
 
 /* Counters */
-.topic-cnt, .post-cnt {
+.topic-cnt,
+.post-cnt {
   color: $white !important;
 }
 
@@ -551,87 +555,87 @@ span {
   &[style*="990000"] {
     color: $red !important;
   }
-  
+
   &[style*="000099"] {
     color: $blue !important;
   }
-  
+
   &[style*="999999"] {
     color: $white !important;
   }
-  
+
   &[style*="524ca7"] {
     color: #6f67e4 !important;
   }
-  
+
   &[style*="833f3a"] {
     color: #bd5b54 !important;
   }
-  
+
   &[style*="b55900"] {
     color: #e36f00 !important;
   }
-  
+
   &[style*="d43e68"] {
     color: #f34777 !important;
   }
-  
+
   &[style*="4692aa"] {
     color: #55b1ce !important;
   }
-  
+
   &[style*="698725"] {
     color: #87ae30 !important;
   }
-  
+
   &[style*="3d4856"] {
     color: #859ab4 !important;
   }
-  
+
   &[style*="8d8d8d"] {
     color: #cccccc !important;
   }
-  
+
   &[style*="4f9a97"] {
     color: #76e4e0 !important;
   }
-  
+
   &[style*="187818"] {
     color: #2cd42c !important;
   }
-  
+
   &[style*="ba5800"] {
     color: #ccbc00 !important;
   }
-  
+
   &[style*="bc0143"] {
     color: #ff1b6b !important;
   }
-  
+
   &[style*="5e0b9e"] {
     color: #a03eec !important;
   }
-  
+
   &[style*="2e32ce"] {
     color: #575bff !important;
   }
-  
+
   &[style*="061956"] {
     color: #2b59ec !important;
   }
-  
+
   &[style="color:#061956"] {
     color: $blue !important;
   }
-  
+
   &[style="color:#b32004"] {
     color: #ff4e2d !important;
   }
-  
+
   &[style="color:#6116bd"] {
     color: #bf8bff !important;
   }
-  
+
   &[style="color:#007800"] {
     color: #0dec0d !important;
   }
