--- a/src/gamelist.scss
+++ b/src/gamelist.scss
@@ -162,12 +162,12 @@ div#gamelist {
 
 #gamelist-active {
   background: $darkgray !important;
-  border-top: 1px solid $middlegray !important;
+  border-top: 1px solid $gray !important;
 
   button.hide-btn {
     background: $darkgray !important;
-    border: 1px solid $middlegray !important;
-    color: $middlegray !important;
+    border: 1px solid $gray !important;
+    color: $gray !important;
 
     &:hover {
       background: $deepgray !important;
@@ -187,13 +187,13 @@ div#gamelist {
 
     h3,
     h4 {
-      color: $middlegray !important;
+      color: $gray !important;
     }
 
     button {
       background: $darkgray !important;
-      color: $middlegray !important;
-      border: 1px solid $middlegray !important;
+      color: $gray !important;
+      border: 1px solid $gray !important;
 
       &:hover {
         background: $deepgray !important;
@@ -206,7 +206,7 @@ div#gamelist {
 
 .recent-game {
   margin: 4px 4px !important;
-  border: 1px solid $middlegray !important;
+  border: 1px solid $gray !important;
   transition: all 0.2s !important;
 
   &:hover {
