--- a/src/home.scss
+++ b/src/home.scss
@@ -72,7 +72,7 @@
 
     .col2,
     .col3 {
-      border-right: 1px solid $middlegray !important;
+      border-right: 1px solid $gray !important;
     }
   }
 
@@ -231,7 +231,7 @@ body #index #live #discussing_forum li .time {
   }
 
   .comments-cnt {
-    border: 1px solid $middlegray !important;
+    border: 1px solid $gray !important;
     background-color: $darkgray !important;
     color: $white !important;
 
