--- a/src/popupDialogue.scss
+++ b/src/popupDialogue.scss
@@ -1,9 +1,10 @@
 /* POPUP BOX CONFIRMATION STYLES */
-.popup_message, #drop_message {
+.popup_message,
+#drop_message {
   .popup-box {
     border-radius: 10px !important;
     overflow: hidden !important;
-    border: 1px solid $middlegray !important;
+    border: 1px solid $gray !important;
   }
 
   .c {
